--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /ZonaiMath/x64/Debug
 /.vs/ZonaiEngine
 /x64/Debug
+/ZonaiEngine/x64/Debug
+/ZonaiPhysics/x64/Debug
+/ZonaiGraphics/x64/Debug
+/ZonaiSounds/x64/Debug
+/ZonaiUtility/x64/Debug
