--- a/ZonaiEngine/ZonaiEngine.vcxproj.filters
+++ b/ZonaiEngine/ZonaiEngine.vcxproj.filters
@@ -19,9 +19,6 @@
     <Filter Include="01. System\Physics">
       <UniqueIdentifier>{f1b4c095-b9fc-4902-a23e-e67e5f3834e8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="01. System\Physics\Component">
-      <UniqueIdentifier>{b51193e2-3d97-4a5f-9714-bec47f46f2a4}</UniqueIdentifier>
-    </Filter>
     <Filter Include="02. Manager">
       <UniqueIdentifier>{fe7b54c9-f8b2-416a-b4c2-57ecab9eff39}</UniqueIdentifier>
     </Filter>
@@ -31,29 +28,38 @@
     <Filter Include="04. Component">
       <UniqueIdentifier>{03b4f4fd-542d-469d-b789-ffdf0fd6d468}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04. Component\Physics">
+    <Filter Include="04. Component\02. Input">
+      <UniqueIdentifier>{d527fe47-80f1-477b-832d-d981745d999d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04. Component\00. Base">
+      <UniqueIdentifier>{501ffcef-cd8e-4f22-92c0-e4e1085c5c3a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04. Component\01. Physics">
       <UniqueIdentifier>{27eeb46f-5a47-4707-b877-bde2c9fba142}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04. Component\Physics\Collider">
+    <Filter Include="04. Component\01. Physics\Collider">
       <UniqueIdentifier>{1704abf6-94c3-4e80-85b0-c17b4f8194aa}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04. Component\Physics\RigidBody">
+    <Filter Include="04. Component\01. Physics\RigidBody">
       <UniqueIdentifier>{389fbf22-7f8a-417e-a81c-8c2c945a7ece}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04. Component\Physics\Joint">
+    <Filter Include="04. Component\01. Physics\Joint">
       <UniqueIdentifier>{fb9722a6-7e72-4a0b-8063-710b5b9e50e0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04. Component\Physics\Cloth">
+    <Filter Include="04. Component\01. Physics\Cloth">
       <UniqueIdentifier>{8359a546-371f-4c6c-8213-902dcf981c5d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04. Component\Physics\SoftBody">
+    <Filter Include="04. Component\01. Physics\SoftBody">
       <UniqueIdentifier>{34dd76c4-6a47-4963-88f4-accf4ad593a6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04. Component\Renderer">
+    <Filter Include="04. Component\04. Sounds">
+      <UniqueIdentifier>{7bb33793-4af6-4671-8873-d027bfe732c4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04. Component\05. Renderer">
       <UniqueIdentifier>{bbd8dc45-aadc-4b6b-96fc-92c78bb93076}</UniqueIdentifier>
     </Filter>
-    <Filter Include="04. Component\Base">
-      <UniqueIdentifier>{501ffcef-cd8e-4f22-92c0-e4e1085c5c3a}</UniqueIdentifier>
+    <Filter Include="01. System\Sounds">
+      <UniqueIdentifier>{3747681a-d6a3-40e4-9e65-77e9209f47ea}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -78,9 +84,6 @@
     <ClInclude Include="PhysicsSystem.h">
       <Filter>01. System\Physics</Filter>
     </ClInclude>
-    <ClInclude Include="Transform.h">
-      <Filter>03. Entities</Filter>
-    </ClInclude>
     <ClInclude Include="ZonaiEngine.h">
       <Filter>00. ZonaiEngine</Filter>
     </ClInclude>
@@ -88,40 +91,52 @@
       <Filter>99. Define</Filter>
     </ClInclude>
     <ClInclude Include="Component.h">
-      <Filter>04. Component\Base</Filter>
+      <Filter>04. Component\00. Base</Filter>
     </ClInclude>
     <ClInclude Include="BoxCollider.h">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClInclude>
     <ClInclude Include="CapsuleCollider.h">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClInclude>
     <ClInclude Include="SphereCollider.h">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClInclude>
     <ClInclude Include="RigidBody.h">
-      <Filter>04. Component\Physics\RigidBody</Filter>
+      <Filter>04. Component\01. Physics\RigidBody</Filter>
     </ClInclude>
     <ClInclude Include="SpringJoint.h">
-      <Filter>04. Component\Physics\Joint</Filter>
+      <Filter>04. Component\01. Physics\Joint</Filter>
     </ClInclude>
     <ClInclude Include="FixedJoint.h">
-      <Filter>04. Component\Physics\Joint</Filter>
+      <Filter>04. Component\01. Physics\Joint</Filter>
     </ClInclude>
     <ClInclude Include="HingeJoint.h">
-      <Filter>04. Component\Physics\Joint</Filter>
+      <Filter>04. Component\01. Physics\Joint</Filter>
     </ClInclude>
     <ClInclude Include="MeshCollider.h">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClInclude>
     <ClInclude Include="MeshRenderer.h">
-      <Filter>04. Component\Renderer</Filter>
+      <Filter>04. Component\05. Renderer</Filter>
     </ClInclude>
     <ClInclude Include="TerreinCollider.h">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClInclude>
     <ClInclude Include="SoftBody.h">
-      <Filter>04. Component\Physics\SoftBody</Filter>
+      <Filter>04. Component\01. Physics\SoftBody</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>04. Component\00. Base</Filter>
+    </ClInclude>
+    <ClInclude Include="Object.h">
+      <Filter>04. Component\00. Base</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>04. Component\05. Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundSystem.h">
+      <Filter>01. System\Sounds</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -146,44 +161,53 @@
     <ClCompile Include="PhysicsSystem.cpp">
       <Filter>01. System\Physics</Filter>
     </ClCompile>
-    <ClCompile Include="Transform.cpp">
-      <Filter>03. Entities</Filter>
-    </ClCompile>
     <ClCompile Include="Component.cpp">
-      <Filter>04. Component\Base</Filter>
+      <Filter>04. Component\00. Base</Filter>
     </ClCompile>
     <ClCompile Include="BoxCollider.cpp">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClCompile>
     <ClCompile Include="CapsuleCollider.cpp">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClCompile>
     <ClCompile Include="SphereCollider.cpp">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClCompile>
     <ClCompile Include="RigidBody.cpp">
-      <Filter>04. Component\Physics\RigidBody</Filter>
+      <Filter>04. Component\01. Physics\RigidBody</Filter>
     </ClCompile>
     <ClCompile Include="SpringJoint.cpp">
-      <Filter>04. Component\Physics\Joint</Filter>
+      <Filter>04. Component\01. Physics\Joint</Filter>
     </ClCompile>
     <ClCompile Include="FixedJoint.cpp">
-      <Filter>04. Component\Physics\Joint</Filter>
+      <Filter>04. Component\01. Physics\Joint</Filter>
     </ClCompile>
     <ClCompile Include="HingeJoint.cpp">
-      <Filter>04. Component\Physics\Joint</Filter>
+      <Filter>04. Component\01. Physics\Joint</Filter>
     </ClCompile>
     <ClCompile Include="MeshCollider.cpp">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClCompile>
     <ClCompile Include="MeshRenderer.cpp">
-      <Filter>04. Component\Renderer</Filter>
+      <Filter>04. Component\05. Renderer</Filter>
     </ClCompile>
     <ClCompile Include="TerreinCollider.cpp">
-      <Filter>04. Component\Physics\Collider</Filter>
+      <Filter>04. Component\01. Physics\Collider</Filter>
     </ClCompile>
     <ClCompile Include="SoftBody.cpp">
-      <Filter>04. Component\Physics\SoftBody</Filter>
+      <Filter>04. Component\01. Physics\SoftBody</Filter>
+    </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>04. Component\00. Base</Filter>
+    </ClCompile>
+    <ClCompile Include="Object.cpp">
+      <Filter>04. Component\00. Base</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>04. Component\05. Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="SoundSystem.cpp">
+      <Filter>01. System\Sounds</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
