--- a/ZonaiPhysics/ZonaiPhysics.vcxproj.filters
+++ b/ZonaiPhysics/ZonaiPhysics.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="MeshCollider.h">
       <Filter>03. Collider</Filter>
     </ClInclude>
+    <ClInclude Include="Box.h">
+      <Filter>04. Shape</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="World.cpp">
@@ -73,6 +76,9 @@
     </ClCompile>
     <ClCompile Include="MeshCollider.cpp">
       <Filter>03. Collider</Filter>
+    </ClCompile>
+    <ClCompile Include="Box.cpp">
+      <Filter>04. Shape</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
