뭔가 원대한 꿈을 가지고 프로젝트를 만든거 같은데 플젝 하느라고 정신없어서 건들지 못하고 있음

--- a/ZonaiUtility/ZonaiUtility.vcxproj
+++ b/ZonaiUtility/ZonaiUtility.vcxproj
@@ -147,7 +147,7 @@
     <ClInclude Include="Time.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Tween.h" />
-    <ClInclude Include="ZonaiUtility.h" />
+    <ClInclude Include="ZonaiUtil.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Random.cpp" />
