--- a/ZonaiMath/ZonaiMath.vcxproj.filters
+++ b/ZonaiMath/ZonaiMath.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="00. ZonaiMath">
+    <Filter Include="00. Zonai::Math">
       <UniqueIdentifier>{b0e805e5-20bf-41cd-9cbc-3f8596d17385}</UniqueIdentifier>
     </Filter>
     <Filter Include="01. Vector">
@@ -36,8 +36,8 @@
     <ClCompile Include="Quaternion.cpp">
       <Filter>03. Quaternion</Filter>
     </ClCompile>
-    <ClCompile Include="ZonaiMath.cpp">
-      <Filter>00. ZonaiMath</Filter>
+    <ClCompile Include="Zonai::Math.cpp">
+      <Filter>00. Zonai::Math</Filter>
     </ClCompile>
     <ClCompile Include="Matrix1x4.cpp">
       <Filter>02. Matrix</Filter>
@@ -72,7 +72,7 @@
       <Filter>03. Quaternion</Filter>
     </ClInclude>
     <ClInclude Include="ZonaiMath.h">
-      <Filter>00. ZonaiMath</Filter>
+      <Filter>00. Zonai::Math</Filter>
     </ClInclude>
     <ClInclude Include="Matrix1x4.h">
       <Filter>02. Matrix</Filter>
