--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -7,9 +7,8 @@ name: MSBuild
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
 
 env:
   # Path to the solution file relative to the root of the project.
@@ -26,19 +25,24 @@ permissions:
 jobs:
   build:
     runs-on: windows-latest
+  strategy:
+    matrix:
+      config: [Debug, Release]
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.2
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Restore NuGet packages
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: nuget restore ${{env.SOLUTION_FILE_PATH}}
+      - name: Restore NuGet packages
+        run: nuget restore ${{ github.workspace }}
 
-    - name: Build
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      # Add additional options to the MSBuild command line here (like platform or verbosity level).
-      # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      - name: Debug Build
+        if: github.ref == 'refs/heads/master' && matrix.config == 'Debug'
+        run: msbuild /m /p:Configuration=Debug ${{ github.workspace }}
+
+      - name: Release Build
+        if: github.ref == 'refs/heads/master' && matrix.config == 'Release'
+        run: msbuild /m /p:Configuration=Release ${{ github.workspace }}
